Doc updates. Changes to keys in config as better naming.

--- a/Scrapbook101core/appsettings.json
+++ b/Scrapbook101core/appsettings.json
@@ -16,6 +16,6 @@
     "ItemDocumentType": "scrapbook101Item",
     "NoAssetImage": "Assets/notfound/todo.png",
     "testCategories": "Assets/category-documents-testset1.json",
-    "testDocuments": "Assets/item-documents-testset1.json"
+    "testItems": "Assets/item-documents-testset1.json"
   }
 }
