--- a/docbuild/api/Scrapbook101core.Scrapbook101Configuration.yml
+++ b/docbuild/api/Scrapbook101core.Scrapbook101Configuration.yml
@@ -19,7 +19,7 @@ items:
   - Scrapbook101core.Scrapbook101Configuration.ItemDocumentType
   - Scrapbook101core.Scrapbook101Configuration.NoAssetImage
   - Scrapbook101core.Scrapbook101Configuration.TestCategories
-  - Scrapbook101core.Scrapbook101Configuration.TestDocuments
+  - Scrapbook101core.Scrapbook101Configuration.TestItems
   langs:
   - csharp
   - vb
@@ -542,35 +542,35 @@ items:
   - set
   modifiers.vb:
   - Public
-- uid: Scrapbook101core.Scrapbook101Configuration.TestDocuments
-  commentId: P:Scrapbook101core.Scrapbook101Configuration.TestDocuments
-  id: TestDocuments
+- uid: Scrapbook101core.Scrapbook101Configuration.TestItems
+  commentId: P:Scrapbook101core.Scrapbook101Configuration.TestItems
+  id: TestItems
   parent: Scrapbook101core.Scrapbook101Configuration
   langs:
   - csharp
   - vb
-  name: TestDocuments
-  nameWithType: Scrapbook101Configuration.TestDocuments
-  fullName: Scrapbook101core.Scrapbook101Configuration.TestDocuments
+  name: TestItems
+  nameWithType: Scrapbook101Configuration.TestItems
+  fullName: Scrapbook101core.Scrapbook101Configuration.TestItems
   type: Property
   source:
     remote:
       path: Scrapbook101core/Models/Configuration.cs
       branch: master
       repo: https://github.com/travelmarx/scrapbook101core
-    id: TestDocuments
+    id: TestItems
     path: ../Scrapbook101core/Models/Configuration.cs
     startLine: 31
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
   syntax:
-    content: public string TestDocuments { get; set; }
+    content: public string TestItems { get; set; }
     parameters: []
     return:
       type: System.String
-    content.vb: Public Property TestDocuments As String
-  overload: Scrapbook101core.Scrapbook101Configuration.TestDocuments*
+    content.vb: Public Property TestItems As String
+  overload: Scrapbook101core.Scrapbook101Configuration.TestItems*
   modifiers.csharp:
   - public
   - get
@@ -960,8 +960,8 @@ references:
   name: TestCategories
   nameWithType: Scrapbook101Configuration.TestCategories
   fullName: Scrapbook101core.Scrapbook101Configuration.TestCategories
-- uid: Scrapbook101core.Scrapbook101Configuration.TestDocuments*
-  commentId: Overload:Scrapbook101core.Scrapbook101Configuration.TestDocuments
-  name: TestDocuments
-  nameWithType: Scrapbook101Configuration.TestDocuments
-  fullName: Scrapbook101core.Scrapbook101Configuration.TestDocuments
+- uid: Scrapbook101core.Scrapbook101Configuration.TestItems*
+  commentId: Overload:Scrapbook101core.Scrapbook101Configuration.TestItems
+  name: TestItems
+  nameWithType: Scrapbook101Configuration.TestItems
+  fullName: Scrapbook101core.Scrapbook101Configuration.TestItems
